Buy now button alignment issue fixed in pdp

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/components/_brand-slider.scss
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/components/_brand-slider.scss
@@ -8,7 +8,7 @@
 	}
 	.brand-img{
 		position: relative;
-		width: 95%;
+		width: 93%;
 		margin: auto;
         
         @include media-breakpoint-down(sm) {
