--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_plp.scss
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_plp.scss
@@ -202,16 +202,16 @@
 				width:33.3%;
 				padding:0 20px;
 				.add-to-wishlist{
-					background: $Sprite no-repeat;
+					background: $Sprite_icon no-repeat;
 					position:absolute;
 					width:30px;
 					height:30px;
 					right:18px;
 					top:10px;
-					background-position: -459px -54px;
+					background-position: -1110px 0;
 				}
 				.add-to-wishlist.added{
-					background-position: -35px 3px;
+					background-position: -1080px 0;
 				}
 				.product-image{
 					padding-bottom:30px;
